derive/tests/snapshots/on_delete_set_zero/Book/get_all_books.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `book` table.
    pub fn get_all_books<'a>(&'a self) -> impl Iterator<Item = Book> {
        use ::spacetimedsl::Wrapper;
        use spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().book().iter()
    }
}
