derive/tests/snapshots/on_delete_set_zero/Book/table.snap
---
source: derive/src/characterization_tests.rs
---
// Documentation appended to the struct:
///
/// # Foreign keys of the `book` table
///
/// - `author_id` references the `id` column of the `author` table (`self`).
///   - On delete: `SetZero`
///   - On soft delete: none, the `author` table is not soft-deletable

pub trait this_compilation_error_occurs_because_the_book_table_has_no_foreign_key_attribute_referencing_the_author_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_author_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_book_table;
    use self::this_compilation_error_occurs_because_your_foreign_key_referencing_the_author_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_author_table_has_no_referenced_by_attribute_referencing_the_book_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct BookId {
    value: u64,
}
impl Default for BookId {
    fn default() -> BookId {
        BookId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for BookId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "BookId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for BookId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Book> for BookId {
    fn from(value: &Book) -> Self {
        BookId { value: value.id.clone() }
    }
}
impl From<&Book> for Option<BookId> {
    fn from(value: &Book) -> Option<BookId> {
        Some(BookId { value: value.id.clone() })
    }
}
impl From<&BookId> for Option<BookId> {
    fn from(value: &BookId) -> Option<BookId> {
        use crate::spacetimedsl::Wrapper;
        Some(BookId::new(value.value()))
    }
}
impl From<&BookId> for BookId {
    fn from(value: &BookId) -> Self {
        use crate::spacetimedsl::Wrapper;
        BookId::new(value.value())
    }
}
impl Book {
    ///
    pub fn get_id(&self) -> BookId {
        use crate::spacetimedsl::Wrapper;
        BookId::new(self.id.clone())
    }
    /**References the `id` column of the `author` table (`self`).

- On delete: `SetZero`
- On soft delete: none, the `author` table is not soft-deletable*/
    pub fn get_author_id(&self) -> AuthorId {
        use crate::spacetimedsl::Wrapper;
        AuthorId::new(self.author_id.clone())
    }
    /**References the `id` column of the `author` table (`self`).

- On delete: `SetZero`
- On soft delete: none, the `author` table is not soft-deletable*/
    pub fn set_author_id(&mut self, author_id: impl Into<AuthorId>) -> AuthorId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.author_id, author_id.into().value());
        AuthorId::new(old_value)
    }
}
///
pub struct CreateBook {
    pub author_id: AuthorId,
}

// Generated DSL methods:
// count_of_all_books
// create_book
// delete_book_by_id
// delete_books_by_author_id
// execute_on_delete_strategies_of_the_book_table_after_multiple_rows_of_the_author_table_were_deleted
// execute_on_delete_strategies_of_the_book_table_after_one_row_of_the_author_table_was_deleted
// get_all_books
// get_book_by_id
// get_books_by_author_id
// update_book_by_id
